--- a/walldecor/www/index.html
+++ b/walldecor/www/index.html
@@ -12,23 +12,25 @@
     </head>
     <body class="desktop " id="application">
         
-        <a href="page2.html">
+        <!--
+         <a href="page2.html">
             <img src="assets/images/intro-mockup.png" id="introimage"/>
         </a>
+         <a href="javascript:launchEditor();">GO TO EDITOR </a>
+         -->
 
-<!--
-      <div class="row">
-        <div class="small-12 medium-3 large-3 columns">
-            IMAGE WITH PROJECTS LIST<br>
+      <div class="row" style="height:40px;">
+        <div class="small-12 medium-2 large-3 columns">
+            
         </div>
         <div class="small-12 medium-7 large-7 columns">
-            CLICK ON PLUS TO GO TO EDITOR<br>
+            Albelli wall products
         </div>
         <div class="small-12 medium-2 large-2 columns">
-            <a href="javascript:launchEditor();">GO TO EDITOR </a>
+            Create new Order
         </div>
       </div>
--->
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
