Added HTML version of index.html

--- a/walldecor/www/page2.html
+++ b/walldecor/www/page2.html
@@ -11,6 +11,7 @@
     </head>
     <body class="desktop " id="application">
         
+        <a href="index.html">Back</a>
         <a href="javascript:takePicture();">
             TAKE PICTURE
         </a>
