--- a/walldecor/www/index.html
+++ b/walldecor/www/index.html
@@ -97,7 +97,9 @@
                         <div class="text-center">Acrylic 70x50cm</div>
                     </li>
                     <li>
-                        <img src="assets/images/demo/demo6.png">
+                        <a href="page2.html">
+                            <img src="assets/images/demo/demo6.png">
+                        </a>
                     </li>
                 </ul>
             </div>
